--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,81 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../favicon.ico" type="image/ico">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../styles/styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <title>LA DELFINA | Contacto</title>
-    </head>
-    <body>
-        <header>
-            <!--Logo principal-->
-            <div class="logo">
-                <a href="../index.html">
-                    <img src="../assets/Logo principal.png" alt="Logo principal"></a>
-            </div>
-            <!--Menu principal navegable-->
-            <div class="menu">
-                    <nav>
-                        <ul>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="./sobre-nosotros.html">Sobre Nosotros</a></li>
-                            <li><a href="./productos.html">Productos</a></li>
-                            <li><a href="./sumate.html">Sumate!</a></li>
-                            <li><a href="#">Contacto</a></li>
-                        </ul>
-                    </nav> 
-                </div>
-        </header>
-        <main>
-            <!--Contenido principal-->
-            <section>
-                <h1>Contactate con nosotros</h1>
-                <h5>CONTÁCTANOS 0800-777-4272 </h5>
-                <h5>Mail: ventas@ladelfina.com.ar</h5>
-                <h5>Sucursales</h5>
-                <h5>Avenida Santa Ana 5968 Barrio Parque república</h5>
-                <h5>Avenida Donato Álvarez 568 Barrio Arguello</h5>
-                <h4 class="h4">Completa el siguiente formulario</h4>
-                    <form action="../index.html">
-                    <input type="text" placeholder="Nombre"class="form-input">
-                    <input type="email" placeholder="Ingrese su correo electronico" required class="form-input">
-                    <input type="number" placeholder="Telefono" class="form-input">
-                    <textarea name="" id="" cols="20" rows="9"  class="form-textarea">Motivo de tu consulta</textarea> 
-                    <input type="reset" class="form-reset">
-                    <input type="submit" class="form-submit"></form>
-            </section>
-            <div><h3><strong>UBICACIÓN</strong></h3></div>
-            <section class="iframe">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13631.987819820783!2d-64.2643339!3d-31.3314572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f3ff1ae6979%3A0xa861632e66d315f7!2sLA%20DELFINA!5e0!3m2!1ses-419!2sar!4v1694461819498!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
-        </main>
-        <div>
-             <!--Boton de wsp-->
-            <a href="https://wa.me/+5493516015248?text=Hola! Tengo una consulta para ustedes" target="_blank" class="sticky">
-            <img src="../assets/WSP.png" alt="WhatsApp Chat" class="wsp">
-            </a>
-        </div>   
-        <!--Inicio footer-->
-        <footer>
-            <a href="#top">Ir a la parte superior</a>
-            <div>
-            <p>Redes sociales</p>
-                <ul class="redes-sociales">
-                    <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>LA DELFINA | Contacto</title>
+</head>
+<body class="font">
+    <header id="top" class="header-1"> 
+        <nav id="nav" class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+            <a href="../index.html">
+                <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/productos.html">Productos</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Quienes somos
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../pages/sobre-nosotros.html">Sobre nosotros</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="../pages/galeria.html">Galeria</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/sumate.html">Sumate</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Contacto</a>
+                </li>
                 </ul>
+                </div>
             </div>
-                <p> CONTÁCTANOS LA DELFINA S.A.
-                    0800-777-4272
-                    ventas@ladelfina.com.ar</p><br>
-                <a href="../pages/avisos-legales.html">Avisos legales</a>
-                <p>Copyright ©2016 La delfina S.A.</p>
-        </footer>
+            </nav>
+    </header>
+    <main class="contacto-main">
+        <!--Contenido principal-->
+        <section>
+            <h1>Contactate con nosotros</h1>
+            <h5>CONTÁCTANOS 0800-777-4272 </h5>
+            <h5>Mail: ventas@ladelfina.com.ar</h5>
+            <h5>Sucursales</h5>
+            <h5>Avenida Santa Ana 5968 Barrio Parque república</h5>
+            <h5>Avenida Donato Álvarez 568 Barrio Arguello</h5>
+            <h4 class="h4">Completa el siguiente formulario</h4>
+            <div class="centrado">
+                <form action="../index.html">
+                    <div class="form-sumate ">
+                    <label class="form-label">Nombre</label>
+                        <input type="text" class="form-control" placeholder="Ingrese su nombre" required>
+                    </div>
+                    <div class="form-sumate">
+                    <label class="form-label">Apellido</label>
+                        <input type="text" class="form-control" placeholder="Ingrese su apellido" required>
+                    </div>
+                    <div class="form-sumate">
+                        <label class="form-label">Correo Electrónico</label>
+                        <div class="input-group has-validation">
+                        <input type="email" class="form-control" placeholder="Ingrese su correo" required>
+                        </div>
+                    </div>
+                    <div class="form-sumate">
+                        <label class="form-label">Teléfono</label>
+                        <input type="number" class="form-control" placeholder="Ingrese su teléfono de contacto" required>
+                    </div>
+                    <div>
+                        <textarea cols="70" rows="10" class="form-ta-sumate">Envía tus comentarios</textarea> 
+                    </div>
+                    <div>
+                        <button class="btn submit-index" type="submit">Enviar información</button>
+                        <button class="btn submit-index" type="form-reset">Restablecer</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <div class="contact-h3"><h3><strong>UBICACIÓN</strong></h3></div>
+        <section class="iframe">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13631.987819820783!2d-64.2643339!3d-31.3314572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f3ff1ae6979%3A0xa861632e66d315f7!2sLA%20DELFINA!5e0!3m2!1ses-419!2sar!4v1694461819498!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    </main>
+    <div>
+        <!--Boton de wsp-->
+        <a href="https://wa.me/+5493516015248?text=Hola! Tengo una consulta para ustedes" target="_blank" class="sticky">
+        <img src="../assets/WhatsApp.jpg" alt="WhatsApp Chat" class="wsp">
+        </a>
+    </div>   
+        <!--Inicio footer-->
+    <footer>
+        <a href="#top" class="a">Ir a la parte superior</a>
+        <div>
+        <p>Redes sociales</p>
+            <ul class="redes-sociales">
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
+            </ul>
+        </div>
+            <p> CONTÁCTANOS LA DELFINA S.A.
+                0800-777-4272
+                ventas@ladelfina.com.ar</p><br>
+            <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
+            <p>Copyright ©2016 La delfina S.A.</p>
+    </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
