--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -7,63 +7,81 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Sobre nosotros</title>
 </head>
-
-<body>
-    <header>
-        <!--Logo principal-->
-        <div class="logo">
+<body class="font">
+    <header id="top" class="header-1"> 
+        <nav id="nav" class="navbar navbar-expand-lg">
+          <div class="container-fluid">
             <a href="../index.html">
-                <img src="../assets/Logo principal.png" alt="Logo principal"></a>
-        </div>
-        <!--Menu principal navegable-->
-        <div class="menu">
-                <nav>
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="#">Sobre Nosotros</a></li>
-                        <li><a href="./productos.html">Productos</a></li>
-                        <li><a href="./sumate.html">Sumate!</a></li>
-                        <li><a href="./contacto.html">Contacto</a></li>
-                    </ul>
-                </nav> 
+              <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/productos.html">Productos</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Quienes somos
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item active" href="#">Sobre nosotros</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../pages/galeria.html">Galeria</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/sumate.html">Sumate</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
             </div>
-    </header>
+          </div>
+        </nav>
+      </header>
     <main>
         <!--Contenido principal-->
         <h1>QUIENES SOMOS</h1>
-            <section class="flex">
+            <div class="flex">
                 <article class="card"><img src="../assets/quienes somos/quienes somos 1.png" alt="Empresa produccion" class="border-img"> <p>Creamos LA DELFINA en 2010 a partir del amor y pasión que tenemos por los autos y el buen serivicio. Somos una distribuidora con una gran experiencia y una red de distribución con ambición a expandirse</p></article>
                 <article class="card"><img src="../assets/quienes somos/quienes somos 2.png" alt="Empresa produccion" class="border-img"><p>En 2019 nos convertimos en una empresa, nos expandimos, llegamos a varios puntos de la provincia y actualmente tenemos una sucursal en expectante inaguración en Brasil.</p></article>
                 <article class="card"><img src="../assets/quienes somos/quienes somos 3.png" alt="Empresa produccion" class="border-img"><p>Logramos aliarnos con pioneros de la industria como lo son Fantini SA, M&L, DINA SRL, entre otros mayoristas con amplia variedad en sus catálogos.</p></article>
                 <article class="card"><img src="../assets/quienes somos/quienes somos 4.png" alt="Empresa produccion" class="border-img"><p>En 2020 certificamos la norma internacional ISO 9001:2015 en gestión de calidad. Nuestra principal característica es la calidad, trabajamos con un staff capacitado para poder generar un esquema win-win.</p></article>
                 <article class="card"><img src="../assets/quienes somos/quienes somos 5.png" alt="Empresa produccion" class="border-img"><p>Sabemos que la honestidad y la transparencia son pilares básicos del negocio para poder ofrecer, no solo los mejores productos, sino también un mejor servicio.</p></article>
-            </section>
+            </div>
     </main>
     <div>
          <!--Boton de wsp-->
         <a href="https://wa.me/+5493516015248?text=Hola! Tengo una consulta para ustedes" target="_blank" class="sticky">
-        <img src="../assets/WSP.png" alt="WhatsApp Chat" class="wsp">
+        <img src="../assets/WhatsApp.jpg" alt="WhatsApp Chat" class="wsp">
         </a>
     </div>  
     <!--Inicio footer--> 
     <footer>
-        <a href="#top">Ir a la parte superior</a>
+        <a href="#top" class="a">Ir a la parte superior</a>
         <div>
         <p>Redes sociales</p>
             <ul class="redes-sociales">
-                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
             </ul>
         </div>
         <p> CONTÁCTANOS LA DELFINA S.A.
             0800-777-4272
             ventas@ladelfina.com.ar</p><br>
-        <a href="../pages/avisos-legales.html">Avisos legales</a>
+        <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
         <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
 </body>
