--- a/pages/sumate.html
+++ b/pages/sumate.html
@@ -7,70 +7,128 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Sumate!</title>
 </head>
-
-<body>
-    <header>
-        <!--Logo principal-->
-        <div class="logo">
-            <a href="../index.html">
-                <img src="../assets/Logo principal.png" alt="Logo principal"></a>
-        </div>
-        <!--Menu principal navegable-->
-        <div class="menu">
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./sobre-nosotros.html">Sobre Nosotros</a></li>
-                    <li><a href="./productos.html">Productos</a></li>
-                    <li><a href="#">Sumate!</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
+<body class="font">
+  <header id="top" class="header-1"> 
+      <nav id="nav" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a href="../index.html">
+            <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/productos.html">Productos</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Quienes somos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../pages/sobre-nosotros.html">Sobre nosotros</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="../pages/galeria.html">Galeria</a></li>
                 </ul>
-            </nav> 
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Sumate</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
     </header>
     <!--Contenido principal-->
-    <main>
+    <main class="contacto-main">
         <h1>Sumate a LA DELFINA</h1>
         <h2>En La Delfina trabajamos desde una década para crecer y desarrollarnos en todo el país ofreciendo el mejor servicio. Esto lo logramos gracias a la participación, compromiso y el trabajo conjunto diario de todos los que la integramos.</h2>
         <h2><strong>Si querés desarrollarte profesionalmente y formar parte de un equipo ganador, envíanos tus datos y nos comunicaremos a la brevedad</strong></h2>
-        <section>
+        <section class="centrado">
             <form action="../index.html">
-            <input type="text" placeholder="Nombre" class="form-input">
-            <input type="text" placeholder="Apellido" class="form-input">
-             <input type="email" placeholder="Ingrese su correo electronico" required class="form-input">
-            <input type="number" placeholder="Telefono" class="form-input">
-            <input type="date" placeholder="Fecha de nacimiento" class="form-input">
-            <textarea name="" id="" cols="20" rows="10" class="form-textarea">Breve descripción de aptitudes</textarea> 
-            <input type="reset" class="form-reset">
-            <input type="submit" class="form-submit"></form>
+                <div class="form-sumate">
+                  <label class="form-label">Nombre</label>
+                  <input type="text" class="form-control" placeholder="Ingrese su nombre" required>
+                </div>
+                <div class="form-sumate">
+                  <label class="form-label">Apellido</label>
+                  <input type="text" class="form-control" placeholder="Ingrese su apellido" required>
+                </div>
+                <div class="form-sumate">
+                  <label class="form-label">Correo Electrónico</label>
+                  <div class="input-group has-validation">
+                    <input type="email" class="form-control" placeholder="Ingrese su correo" required>
+                  </div>
+                </div>
+                <div class="form-sumate">
+                  <label class="form-label">Teléfono</label>
+                  <input type="number" class="form-control" placeholder="Ingrese su teléfono de contacto" required>
+                </div>
+                <div class="form-sumate">
+                  <label class="form-label">Puesto de interés</label>
+                  <select class="form-select" required>
+                    <option selected disabled value="">Encargado</option>
+                    <option>Vendedor</option>
+                    <option>Repositor</option>
+                    <option>Viajante</option>
+                  </select>
+                </div>
+                <div class="form-sumate">
+                  <label for="validationCustom05" class="form-label">Fecha de nacimiento</label>
+                  <input type="date" class="form-control" required>
+                </div>
+                <div class="form-sumate">
+                </div>
+                <div>
+                    <textarea cols="70" rows="10" class="form-ta-sumate">Breve descripción de aptitudes</textarea> 
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                      Envío mi curriculum por correo
+                    </label>
+                  </div>
+                <div>
+                  <button class="btn submit-index" type="submit">Enviar información</button>
+                  <button class="btn submit-index" type="form-reset">Restablecer</button>
+                </div>
+              </form>
         </section>
     </main>
     <div>
          <!--Boton de wsp-->
         <a href="https://wa.me/+5493516015248?text=Hola! Tengo una consulta para ustedes" target="_blank" class="sticky">
-        <img src="../assets/WSP.png" alt="WhatsApp Chat" class="wsp">
+        <img src="../assets/WhatsApp.jpg" alt="WhatsApp Chat" class="wsp">
         </a>
     </div>   
     <!--Inicio footer-->
     <footer>
-        <a href="#top">Ir a la parte superior</a>
+        <a href="#top" class="a">Ir a la parte superior</a>
         <div>
             <p>Redes sociales</p>
             <ul class="redes-sociales">
-                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
             </ul>
         </div>
             <p> CONTÁCTANOS LA DELFINA S.A.
                 0800-777-4272
                 ventas@ladelfina.com.ar</p><br>
-            <a href="../pages/avisos-legales.html">Avisos legales</a>
+            <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
             <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
