se realiza grid en galeria y se realiza responsive en index y galeria

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>LA DELFINA</title>
 </head>
 <body class="font">
-        <header id="top" class="header-1 header"> 
+    <header id="top" class="header-1 header"> 
           <a href="#">
             <img src="./assets/Logo principal.png" alt="Logo principal" class="logo"></a>
             <nav id="nav" class="navbar navbar-expand-lg">
@@ -52,19 +52,18 @@
           </div>
     </header>
     <!--Inicio página-->
-    <main class="grid-container-index">
-        <div>   
+    
+    <main class="grid-container-index main">
+        <div class="grid-1">   
           <h1>BIENVENIDOS A LA DELFINA</h1>
           <h2>CASAS DE REPUESTOS DEL AUTOMOTOR EN CÓRDOBA CAPITAL</h2>
           <h3>Repuestos Renault, Ford, Volskwagen, Fiat, Audi, Chevrolet. Autopartes.</h3>
           <h5>Embragues, Frenos, Bomba de Agua, Tren delantero, Ópticas, Inyección electrónica, Guardabarros, Tazas, Amortiguadores, Paragolpes, Baterías.</h5>
         </div>
-        <div class="fondot1">
-            <h2>¿Por qué comprar en LA DELFINA?</h2>
-            <p>Porque desde hace más de 10 años tenemos un fuerte compromiso de servicio hacia los comerciantes del repuesto automotor de todo el país y trabajamos día a día superándonos para atender las necesidades de un mercado cada vez más demandante.</p>
-        </div>
-        <div>
-        <section class="flex">
+    </main>
+
+      <section class="main">
+        <div class="card-grid">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Stock</h5>
@@ -82,7 +81,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Servicio</h5>
-              <p class="card-text">Nuestro Departamento de Atención permite a nuestros clientes realizar pedidos constantemente. Incorporamos nuevas tecnologías de comunicación para estar más cerca y pendiente de las necesidades.</p>
+              <p class="card-text">El Departamento de Atención permite que clientes realicen pedidos. Incorporamos nuevas tecnologías de comunicación.</p>
               <a href="#" class="btn submit-index centrado">Conocé más</a>
             </div>
           </div>
@@ -93,18 +92,21 @@
               <a href="./pages/productos.html" class="btn submit-index centrado">¡Comprá acá!</a>
             </div>
           </div>
-          </div>
-        </section>
+        </div>
+
         <section class="index datos">
             <div><strong>3927</strong> CLIENTES CONTENTOS</div><div><strong>1299918</strong> PRODUCTOS VENDIDOS</div><div><strong>30</strong> AÑOS DE EXPERIENCIA</div><div><strong>9/10</strong> NOS RECOMIENDAN</div>
         </section>
+
         <div class="formbb">
             <p>Nos llena de felicidad poder anunciarles que estamos incursionando en el mundo de los chasis de la mano de los mejores: <a href="https://collinotiendaoficial.com.ar/" target="_blank" class="ab">COLLINO</a>. Les dejamos un poco de lo que fue su último gran trabajo. Innovadores y distruptivos es como se definen y este chasis afirma estos conceptos
         </div>
+
         <div class="iframe">  
-              <iframe width="850" height="500" src="https://www.youtube.com/embed/PQzeYa6_ejw?si=WR13k6yOIIEObm01" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe class="clase-video" src="https://www.youtube.com/embed/PQzeYa6_ejw?si=WR13k6yOIIEObm01" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-        <div>
+
+        <div class="h2-grid">
             <h2>NOS ACOMPAÑAN EN ESTE CAMINO</h2>
         </div>
         <section class="nos-acompanan">
@@ -113,13 +115,14 @@
           <img src="./assets/Nos acompañan/M&L.png" alt="Empresa M&L" class="nos-acompanan-img">
           <img src="./assets/Nos acompañan/moura.png" alt="Empresa Moura" class="nos-acompanan-img">
         </section>    
-    </main>
-    <div>
+      </section>
+    <div class="btn-wsp">
         <!--Boton de wsp-->
         <a href="https://wa.me/+5493516015248?text=Hola! Tengo una consulta para ustedes" target="_blank" class="sticky">
         <img src="./assets/WhatsApp.jpg" alt="WhatsApp Chat" class="wsp">
         </a>
     </div>
+ 
     <!--Inicio footer-->
     <footer class="footer">
         <a href="#top" class="a">Ir a la parte superior</a>
