--- a/pages/avisos-legales.html
+++ b/pages/avisos-legales.html
@@ -50,7 +50,7 @@
           </div>
         </nav>
       </header>
-    <main>
+    <main class="main">
         <!--Contenido principal-->
         <h1>AVISOS LEGALES</h1>
             <p>Avisos legales: Resolución 244/2020 de la Secretaría de Comercio Interior del Ministerio de Desarrollo Productivo
