--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -52,7 +52,7 @@
       </header>
     <div class="grid-container">
         <div class="grid-img1">
-            <img src="../assets/Sucursal/Sucursal1.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal1.jpg" alt="Nuestra sucursal">
         </div>
         <div class="grid-img2">
             <img src="../assets/Sucursal/Sucursal2.jpg" alt="">
