--- a/pages/productos.html
+++ b/pages/productos.html
@@ -50,34 +50,34 @@
           </div>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <!--Contenido principal-->
         <h1>PRODUCTOS</h1>
         <h4>Conocé nuestros productos, comprá y... Te lo llevamos!</h4>
         <div class="satisfaccion">
             <form class="formbb">
                 <input placeholder="Que deseas buscar?" >
-                <button class="btn" type="submit">Buscar</button>
+                <button class="btn1" type="submit">Buscar</button>
             </form>
         </div>
         <div class="div-productos">
-            <div class="productos"><img src="../assets/productos/productos 2.png" alt="Frenos" class="card prod-1"></div>
-            <form action="#top">
+            <div class="productos"><img src="../assets/productos/productos 2.png" alt="Frenos" class="card-prod prod-1"></div>
+            <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
                 <input type="submit" placeholder="Comprar">
-            <article><img src="../assets/productos/productos 3.png" alt="Sistema de encendido" class="card prod-2"></article>
-            <form action="#top">
+            <article><img src="../assets/productos/productos 3.png" alt="Sistema de encendido" class="card-prod prod-2"></article>
+            <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
                 <input type="submit" placeholder="Comprar">
-            <article><img src="../assets/productos/productos 4.png" alt="Filtros" class="card prod-3"></article>
-            <form action="#top">
+            <article><img src="../assets/productos/productos 4.png" alt="Filtros" class="card-prod prod-3"></article>
+            <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
-                <input type="reset">
-                <input type="submit" placeholder="Comprar">
-            <article><img src="../assets/productos/productos 5.png" alt="Amortiguación" class="card prod-4"></article>
-            <form action="#top">
+                <input type="reset" class="form-input">
+                <input type="submit" placeholder="Comprar" class="form-input">
+            <article><img src="../assets/productos/productos 5.png" alt="Amortiguación" class="card-prod prod-4"></article>
+            <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
                 <input type="submit" placeholder="Comprar">
@@ -97,19 +97,19 @@
     </div>   
     <!--Inicio footer-->
     <footer>
-        <a href="#top">Ir a la parte superior</a>
+        <a href="#top" class="a">Ir a la parte superior</a>
         <div>
             <p>Redes sociales</p>
                 <ul class="redes-sociales">
-                    <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
+                    <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
                 </ul>
         </div>
             <p> CONTÁCTANOS LA DELFINA S.A.
                 0800-777-4272
                 ventas@ladelfina.com.ar</p><br>
-            <a href="../pages/avisos-legales.html">Avisos legales</a>
+            <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
             <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
