--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -50,14 +50,14 @@
           </div>
         </nav>
       </header>
-    <main>
+    <main class="main">
         <!--Contenido principal-->
         <h1>QUIENES SOMOS</h1>
             <div class="flex">
-                <article class="card"><img src="../assets/quienes somos/quienes somos 1.png" alt="Empresa produccion" class="border-img"> <p>Creamos LA DELFINA en 2010 a partir del amor y pasión que tenemos por los autos y el buen serivicio. Somos una distribuidora con una gran experiencia y una red de distribución con ambición a expandirse</p></article>
+                <article class="card"><img src="../assets/quienes somos/quienes somos 1.png" alt="Empresa produccion" class="border-img"> <p>Creamos LA DELFINA en 2010 a partir del amor y pasión que tenemos por los autos y el buen serivicio. Somos una distribuidora con una gran experiencia</p></article>
                 <article class="card"><img src="../assets/quienes somos/quienes somos 2.png" alt="Empresa produccion" class="border-img"><p>En 2019 nos convertimos en una empresa, nos expandimos, llegamos a varios puntos de la provincia y actualmente tenemos una sucursal en expectante inaguración en Brasil.</p></article>
                 <article class="card"><img src="../assets/quienes somos/quienes somos 3.png" alt="Empresa produccion" class="border-img"><p>Logramos aliarnos con pioneros de la industria como lo son Fantini SA, M&L, DINA SRL, entre otros mayoristas con amplia variedad en sus catálogos.</p></article>
-                <article class="card"><img src="../assets/quienes somos/quienes somos 4.png" alt="Empresa produccion" class="border-img"><p>En 2020 certificamos la norma internacional ISO 9001:2015 en gestión de calidad. Nuestra principal característica es la calidad, trabajamos con un staff capacitado para poder generar un esquema win-win.</p></article>
+                <article class="card"><img src="../assets/quienes somos/quienes somos 4.png" alt="Empresa produccion" class="border-img"><p>En 2020 certificamos la norma internacional ISO 9001:2015 en gestión de calidad. Nuestra principal característica es la calidad, trabajamos con un staff capacitado.</p></article>
                 <article class="card"><img src="../assets/quienes somos/quienes somos 5.png" alt="Empresa produccion" class="border-img"><p>Sabemos que la honestidad y la transparencia son pilares básicos del negocio para poder ofrecer, no solo los mejores productos, sino también un mejor servicio.</p></article>
             </div>
     </main>
@@ -84,5 +84,6 @@
         <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
         <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
